poc/tests/errors/test_FplVariableAlreadyDeclared_functional_term_05.fpl
Test.Namespace
{
    theory
    {
        function Test() -> Nat
        {
            x: Nat
            return x

            mandatory func TestProperty(x: Nat) -> Nat
            {
                return undefined
            }
        }
    }
}

##############################

FplVariableAlreadyDeclared:10:41: The name 'x' was already declared in the current context at (7,13)